force-app/main/default/objects/MCP_Server_Config__c/MCP_Server_Config__c.object-meta.xml
<CustomObject>
    <description>This is a custom object which will store the server configuration or agent configuration for all of the agents.</description>
    <label>MCP Server Config</label>
    <nameField>
        <label>MCP Server Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MCP Server Config</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>