force-app/main/default/objects/MCP_Server_Config__c/fields/Agent_SkillSet__c.field-meta.xml
<CustomField>
    <fullName>Agent_SkillSet__c</fullName>
    <label>Agent_SkillSet</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>