force-app/main/default/objects/MCP_Server_Config__c/fields/MCP_Agent_API_Name__c.field-meta.xml
<CustomField>
    <fullName>MCP_Agent_API_Name__c</fullName>
    <label>MCP_Agent_API_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>