force-app/main/default/objects/MCP_Server_Config__c/fields/MCP_Downtime_Message__c.field-meta.xml
<CustomField>
    <fullName>MCP_Downtime_Message__c</fullName>
    <label>MCP_Downtime_Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>