force-app/main/default/objects/MCP_Server_Config__c/fields/MCP_Status__c.field-meta.xml
<CustomField>
    <fullName>MCP_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MCP_Status</label>
    <type>Checkbox</type>
</CustomField>