force-app/main/default/objects/MCP_Server_Config__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MCP_Agent_Name__c</columns>
    <columns>MCP_Agent_API_Name__c</columns>
    <columns>Agent_SkillSet__c</columns>
    <columns>MCP_Downtime_Message__c</columns>
    <columns>MCP_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Agent Controller Screen</label>
</ListView>